--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -11,6 +11,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'cv2.cv2' has no attribute '_version__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-785ffdcfcad6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_version__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'cv2.cv2' has no attribute '_version__'"
+     ]
+    }
+   ],
+   "source": [
+    "cv2._version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google_drive_downloader import GoogleDriveDownloader as gdd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 1-SedkqOx3301MNTSMWtFuZxQ_rlCZC53 into backend/model_config/ladder/ladder_yolov4_best.weights... Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdd.download_file_from_google_drive(file_id='1-SedkqOx3301MNTSMWtFuZxQ_rlCZC53',\n",
+    "                                    dest_path='backend/model_config/ladder/ladder_yolov4_best.weights')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -82,6 +146,555 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "now = datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ec2-user/travis/Yolo4-ladder-detection-flask-app'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src = os.path.join(os.getcwd(),\"backend/model_config/ladder/archive/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ec2-user/travis/Yolo4-ladder-detection-flask-app/backend/model_config/ladder/archive/'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "src"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dst = os.path.join(\"/home/ec2-user/travis/darknet/images/ladder\",now.strftime(\"%Y-%m-%d_%H_%M\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ec2-user/travis/darknet/images/ladder/2021-01-11_14_17'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src_archive = os.path.join(src,\"ladder\",now.strftime(\"%Y-%m-%d_%H_%M\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ec2-user/travis/Yolo4-ladder-detection-flask-app/backend/model_config/ladder/archive/ladder/2021-01-11_14_17'"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "src_archive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ec2-user/travis/Yolo4-ladder-detection-flask-app/backend/model_config/ladder/archive/'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "src"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if not os.path.exists(dst):\n",
+    "#os.makedirs(dst,exist_ok=True)\n",
+    "os.makedirs(src_archive,exist_ok=True)\n",
+    "os.makedirs(os.path.join(src_archive,\"images\"),exist_ok=True)\n",
+    "os.makedirs(os.path.join(src_archive,\"backup\"),exist_ok=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.symlink(src_archive,dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# archive the new data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ori = os.path.join(os.getcwd(),\"backend/model_config/ladder/images/\")\n",
+    "for f in os.listdir(ori):\n",
+    "    if not f.startswith('.'):\n",
+    "        shutil.move(os.path.join(ori,f),os.path.join(src_archive,\"images/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# write config fiels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = [f for f in os.listdir(os.path.join(src_archive,\"images/\")) if not f.startswith('.')]\n",
+    "num_data = len(files)//2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r_path = os.path.join(\"images/ladder/\",now.strftime(\"%Y-%m-%d_%H_%M\"))\n",
+    "tr = int(num_data*0.9)\n",
+    "te = int(num_data-tr)\n",
+    "tr_files=[]\n",
+    "te_files=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'images/ladder/2021-01-11_14_17'"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_file = [f for f in files if not f.endswith(\".txt\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Capture3.JPG', 'Capture.JPG']"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ec2-user/travis/Yolo4-ladder-detection-flask-app/backend/model_config/ladder/archive/ladder/2021-01-11_14_17'"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "src_archive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,f in enumerate(image_file):\n",
+    "    if i < tr:\n",
+    "        tr_files.append(os.path.join(r_path,\"images\",f))\n",
+    "    else:\n",
+    "        te_files.append(os.path.join(r_path,\"images\",f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['images/ladder/2021-01-11_14_17/images/Capture3.JPG']"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tr_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(src_archive,\"ladder_training.txt\"),mode=\"wt\",encoding=\"utf-8\") as myFile:\n",
+    "    myFile.write(\"\\n\".join(tr_files))\n",
+    "\n",
+    "with open(os.path.join(src_archive,\"ladder_testing.txt\"),mode=\"wt\",encoding=\"utf-8\") as myFile:\n",
+    "    myFile.write(\"\\n\".join(te_files))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_config = [\"classes=1\",\"train=\"+os.path.join(r_path,\"ladder_training.txt\"),\n",
+    "               \"valid=\"+os.path.join(r_path,\"ladder_testing.txt\"),\n",
+    "              \"names=\"+os.path.join(r_path,now.strftime(\"%Y-%m-%d_%H_%M\")+\".names\"),\n",
+    "              \"backup=\"+os.path.join(r_path,\"backup/\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(src_archive,now.strftime(\"%Y-%m-%d_%H_%M\")+\".data\"),mode=\"wt\",encoding=\"utf-8\") as myFile:\n",
+    "    myFile.write(\"\\n\".join(data_config))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(src_archive,now.strftime(\"%Y-%m-%d_%H_%M\")+\".names\"),mode=\"wt\",encoding=\"utf-8\") as myFile:\n",
+    "    myFile.write(\"ladder\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ec2-user/travis/darknet/images/ladder/2021-01-11_14_17'"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ec2-user/travis/Yolo4-ladder-detection-flask-app'"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src_w = \"/home/ec2-user/travis/Yolo4-ladder-detection-flask-app/backend/model_config/ladder/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subprocess_cmd(command):\n",
+    "    process = subprocess.Popen(command,stdout=subprocess.PIPE, shell=True)\n",
+    "    proc_stdout = process.communicate()[0].strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'images/ladder/2021-01-11_14_17'"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subprocess_cmd(\"cd ../darknet\"+\";\"+\n",
+    "                \"./darknet detector train {} {} {} -dont_show -map\".format(os.path.join(r_path,now.strftime(\"%Y-%m-%d_%H_%M\")+\".data\"),\n",
+    "                                                                         os.path.join(src_w,\"ladder_yolov4.cfg\"),\n",
+    "                                                                          os.path.join(src_w,\"ladder_yolov4_best_0106.weights\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./darknet detector train images/ladder/2021-01-11_14_17/2021-01-11_14_17.data /home/ec2-user/travis/Yolo4-ladder-detection-flask-app/backend/model_config/ladder/ladder_yolov4.cfg /home/ec2-user/travis/Yolo4-ladder-detection-flask-app/backend/model_config/ladder/ladder_yolov4_best_0106.weights -dont_show -map'"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " \"./darknet detector train {} {} {} -dont_show -map\".format(os.path.join(r_path,now.strftime(\"%Y-%m-%d_%H_%M\")+\".data\"),\n",
+    "                                                                         os.path.join(src_w,\"ladder_yolov4.cfg\"),\n",
+    "                                                                          os.path.join(src_w,\"ladder_yolov4_best_0106.weights\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['010.jpg',\n",
+       " '010.txt',\n",
+       " '1a4fab25cf9323bc7efd89d12fee488.png',\n",
+       " '1a4fab25cf9323bc7efd89d12fee488.txt',\n",
+       " 'test',\n",
+       " '.ipynb_checkpoints']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(src)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -104,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
